Update template containers

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
     <div id="mainResume">
       <!-- Here we'll display actual weather -->
     </div>
-    <div id="todayData">
+    <div id="weekData">
       <!-- Here we'll display today's weather by hour -->
     </div>
-    <div id="weekData">
+    <div id="mainFooter">
       <!-- Here we'll display upcoming days weather -->
     </div>
   </div>
