Add search functionality - Make an API call to fetch coordinates - Display results inside a list next to input

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <input id="inputPlace" name="inputPlace" type="text">
       </form>
       <button id="searchPlace" type="button" for="setPlace">Search</button>
+      <fieldset class="results hide" id="results"></fieldset>
     </div>
     <div id="mainResume">
       <!-- Here we'll display actual weather -->
