--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,9 @@
       <!-- Here we'll display actual weather -->
     </div>
     <div id="weekData">
-      <!-- Here we'll display today's weather by hour -->
-    </div>
-    <div id="mainFooter">
       <!-- Here we'll display upcoming days weather -->
     </div>
+    <div id="mainFooter"></div>
   </div>
 </body>
 
