Add style content to mainLeft

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,37 @@
       <fieldset class="results hide" id="results"></fieldset>
     </div>
     <div id="mainResume">
-      <!-- Here we'll display actual weather -->
+      <div id="mainLeft">
+        <div id="hero">
+          <!-- city -->
+          <span id="heroCity">Test city</span>
+          <!-- dt -->
+          <p id="heroDt">Friday, February 10th 2022</p>
+          <p id="heroClock">01:29 a.m</p>
+          <!-- icon, temp -->
+          <div id="heroIconTemp">
+            <img id="heroIcon" src="http://openweathermap.org/img/wn/10d@4x.png" alt="clouds">
+            <span id="heroTemp">18 °C</span>
+          </div>
+          <!-- description -->
+          <p id="heroDescription">Broken clouds</p>
+        </div>
+        <div id="details">
+          <ul id="detailsList">
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
+            <!-- feels like -->
+            <!-- humidity -->
+            <!-- current uvi -->
+            <!-- chance of rain -->
+          </ul>
+        </div>
+      </div>
+      <div id="mainRight">
+        <ul id="hourlyList"></ul>
+      </div>
     </div>
     <div id="weekData">
       <!-- Here we'll display upcoming days weather -->
