--- a/src/index.html
+++ b/src/index.html
@@ -28,26 +28,187 @@
           <!-- icon, temp -->
           <div id="heroIconTemp">
             <img id="heroIcon" src="http://openweathermap.org/img/wn/10d@4x.png" alt="clouds">
-            <span id="heroTemp">18 °C</span>
+            <span id="heroTemp">18.66 °C</span>
           </div>
           <!-- description -->
           <p id="heroDescription">Broken clouds</p>
         </div>
         <div id="details">
           <ul id="detailsList">
-            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
-            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
-            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
-            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18 °C</span></li>
-            <!-- feels like -->
-            <!-- humidity -->
-            <!-- current uvi -->
-            <!-- chance of rain -->
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Feels like:</span><span>18.99
+                °C</span>
+            </li>
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Humidity:</span><span>30%</span>
+            </li>
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Current UVI:</span><span>20%</span>
+            </li>
+            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt=""><span>Chance of
+                Rain:</span><span>18%</span>
+            </li>
           </ul>
         </div>
       </div>
       <div id="mainRight">
-        <ul id="hourlyList"></ul>
+        <div>
+          <h2>Hourly</h2>
+        </div>
+        <ul id="hourlyList">
+          <!-- dt, img, temp, feels like, uvi, pop -->
+          <li>
+            <div>
+              <span>02:00</span>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.43 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.66 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>33%</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>42%</span>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>02:00</span>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.43 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.66 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>33%</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>42%</span>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>02:00</span>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.43 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.66 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>33%</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>42%</span>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>02:00</span>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.43 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.66 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>33%</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>42%</span>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>02:00</span>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.43 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.66 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>33%</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>42%</span>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>02:00</span>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.43 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.66 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>33%</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>42%</span>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>02:00</span>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.43 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>18.66 °C</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>33%</span>
+            </div>
+            <div>
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <span>42%</span>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div id="weekData">
