--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,72 @@
       </div>
     </div>
     <div id="weekData">
-      <!-- Here we'll display upcoming days weather -->
+      <ul id="dailyList">
+        <li>
+          <div class="daily-card">
+            <p>Monday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+        <li>
+          <div class="daily-card">
+            <p>Tuesday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+        <li>
+          <div class="daily-card">
+            <p>Tuesday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+        <li>
+          <div class="daily-card">
+            <p>Tuesday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+        <li>
+          <div class="daily-card">
+            <p>Tuesday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+        <li>
+          <div class="daily-card">
+            <p>Tuesday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+        <li>
+          <div class="daily-card">
+            <p>Tuesday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+        <li>
+          <div class="daily-card">
+            <p>Tuesday</p>
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p><span>24 °C</span> / <span>18 °C</span></p>
+            <p><span>20%</span><span>12.92</span></p>
+          </div>
+        </li>
+      </ul>
     </div>
     <div id="mainFooter"></div>
   </div>
