Change output assets directory

--- a/src/index.html
+++ b/src/index.html
@@ -44,20 +44,20 @@
         <div id="details">
           <ul id="detailsList">
             <li>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <img src="./assets/<%=require('./assets/icons8-thermometer-48.png')%>" alt="current temperature">
               <span>Feels like:</span>
               <span id="detailTemp">18.99 °C</span>
             </li>
             <li>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
+              <img src="./assets/<%=require('./assets/icons8-hygrometer-48.png')%>" alt="current humidity">
               <span>Humidity:</span><span id="detailHumidity">30%</span>
             </li>
-            <li><img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>Current UVI:</span><span id="detailUvi">20%</span>
+            <li><img src="./assets/<%=require('./assets/icons8-clouds-48.png')%>" alt="current clouds">
+              <span>Clouds:</span><span id="detailClouds">20%</span>
             </li>
             <li>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>Chance of Rain:</span><span id="detailPop">18%</span>
+              <img src="./assets/<%=require('./assets/icons8-windsock-48.png')%>" alt="current wind">
+              <span>Wind speed:</span><span id="detailWind">18%</span>
             </li>
           </ul>
         </div>
