Add detail data to mainLeft

--- a/src/index.html
+++ b/src/index.html
@@ -46,18 +46,18 @@
             <li>
               <img src="./assets/<%=require('./assets/icons8-thermometer-48.png')%>" alt="current temperature">
               <span>Feels like:</span>
-              <span id="detailTemp">18.99 °C</span>
+              <span id="detailTemp"></span>
             </li>
             <li>
               <img src="./assets/<%=require('./assets/icons8-hygrometer-48.png')%>" alt="current humidity">
-              <span>Humidity:</span><span id="detailHumidity">30%</span>
+              <span>Humidity:</span><span id="detailHumidity"></span>
             </li>
             <li><img src="./assets/<%=require('./assets/icons8-clouds-48.png')%>" alt="current clouds">
-              <span>Clouds:</span><span id="detailClouds">20%</span>
+              <span>Clouds:</span><span id="detailClouds"></span>
             </li>
             <li>
               <img src="./assets/<%=require('./assets/icons8-windsock-48.png')%>" alt="current wind">
-              <span>Wind speed:</span><span id="detailWind">18%</span>
+              <span>Wind speed:</span><span id="detailWind"></span>
             </li>
           </ul>
         </div>
