--- a/src/index.html
+++ b/src/index.html
@@ -44,19 +44,19 @@
         <div id="details">
           <ul id="detailsList">
             <li>
-              <img src="./assets/<%=require('./assets/icons8-thermometer-48.png')%>" alt="current temperature">
+              <img src="<%=require('./assets/icons8-thermometer-48.png')%>" alt="current temperature">
               <span>Feels like:</span>
               <span id="detailTemp"></span>
             </li>
             <li>
-              <img src="./assets/<%=require('./assets/icons8-hygrometer-48.png')%>" alt="current humidity">
+              <img src="<%=require('./assets/icons8-hygrometer-48.png')%>" alt="current humidity">
               <span>Humidity:</span><span id="detailHumidity"></span>
             </li>
-            <li><img src="./assets/<%=require('./assets/icons8-clouds-48.png')%>" alt="current clouds">
+            <li><img src="<%=require('./assets/icons8-clouds-48.png')%>" alt="current clouds">
               <span>Clouds:</span><span id="detailClouds"></span>
             </li>
             <li>
-              <img src="./assets/<%=require('./assets/icons8-windsock-48.png')%>" alt="current wind">
+              <img src="<%=require('./assets/icons8-windsock-48.png')%>" alt="current wind">
               <span>Wind speed:</span><span id="detailWind"></span>
             </li>
           </ul>
