Add API call data to mainRight

--- a/src/index.html
+++ b/src/index.html
@@ -66,163 +66,7 @@
         <div>
           <h2>Hourly</h2>
         </div>
-        <ul id="hourlyList">
-          <!-- dt, img, temp, feels like, uvi, pop -->
-          <li>
-            <div>
-              <span>02:00</span>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.43 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.66 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>33%</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>42%</span>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>02:00</span>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.43 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.66 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>33%</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>42%</span>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>02:00</span>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.43 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.66 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>33%</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>42%</span>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>02:00</span>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.43 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.66 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>33%</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>42%</span>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>02:00</span>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.43 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.66 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>33%</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>42%</span>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>02:00</span>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.43 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.66 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>33%</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>42%</span>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>02:00</span>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.43 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>18.66 °C</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>33%</span>
-            </div>
-            <div>
-              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-              <span>42%</span>
-            </div>
-          </li>
-        </ul>
+        <ul id="hourlyList"></ul>
       </div>
     </div>
     <div id="weekData">
