Change wind speed icon

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
               <span>Clouds:</span><span id="detailClouds"></span>
             </li>
             <li>
-              <img src="<%=require('./assets/icons8-windsock-48.png')%>" alt="current wind">
+              <img src="<%=require('./assets/icons8-wind-48.png')%>" alt="current wind">
               <span>Wind speed:</span><span id="detailWind"></span>
             </li>
           </ul>
