Add footer links

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,19 @@
     <div id="weekData">
       <ul id="dailyList"></ul>
     </div>
-    <div id="mainFooter"></div>
+    <div id="mainFooter">
+      <p>
+        Weather <a href="https://openweathermap.org/weather-conditions">icons</a> by <a href="https://openweathermap.org/">OpenWeather</a>
+      </p>
+      <p>
+        <a target="_blank" href="https://icons8.com/icon/SQ8e0DfA2qsj/thermometer">Thermometer</a>,
+        <a target="_blank" href="https://icons8.com/icon/wMAoejBucpr0/hygrometer">Hygrometer</a>,
+        <a target="_blank" href="https://icons8.com/icon/1Fj1JLweMRsR/clouds">Clouds</a>,
+        <a target="_blank" href="https://icons8.com/icon/ZZNucphlEBf9/wind">Wind</a> ,
+        <a target="_blank" href="https://icons8.com/icon/mS88fu3JtfrS/wet">Wet</a>
+        icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+      </p>
+    </div>
   </div>
 </body>
 
