Remove span text

--- a/src/index.html
+++ b/src/index.html
@@ -45,19 +45,18 @@
           <ul id="detailsList">
             <li>
               <img src="<%=require('./assets/icons8-thermometer-48.png')%>" alt="current temperature">
-              <span>Feels like:</span>
               <span id="detailTemp"></span>
             </li>
             <li>
               <img src="<%=require('./assets/icons8-hygrometer-48.png')%>" alt="current humidity">
-              <span>Humidity:</span><span id="detailHumidity"></span>
+              <span id="detailHumidity"></span>
             </li>
             <li><img src="<%=require('./assets/icons8-clouds-48.png')%>" alt="current clouds">
-              <span>Clouds:</span><span id="detailClouds"></span>
+              <span id="detailClouds"></span>
             </li>
             <li>
               <img src="<%=require('./assets/icons8-wind-48.png')%>" alt="current wind">
-              <span>Wind speed:</span><span id="detailWind"></span>
+              <span id="detailWind"></span>
             </li>
           </ul>
         </div>
