Add title in header for hourly values

--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,14 @@
         </div>
       </div>
       <div id="mainRight">
-        <div>
+        <div id="mainRightHeader">
           <h2>Hourly</h2>
+          <div>
+            <span>Max</span>
+            <span>Min</span>
+            <span>Clouds</span>
+            <span>PoP</span>
+          </div>
         </div>
         <ul id="hourlyList"></ul>
       </div>
